--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Médias</title>
+    <title>Prompt</title>
 </head>
 <body>
     <h1>Notas Do Pedrinho</h1>
     <p><b>Primeiro Trimestre:</b></p> <p class="primeiroTrim">60</p>
     <p><b>Segundo Trimestre:</b></p> <p class="segundoTrim">60</p>
-    <p><b>Terceiro Trimestre:</b></p> <p class="terceiroTrim">10</p>
+    <p><b>Terceiro Trimestre:</b></p> <p class="terceiroTrim">60</p>
     <p><b>Foi aprovado?</b></p> <p class="aprovacao">para ser resolvido</p>
 
-<!--abaixo é vinculado o javascript-->
-    <script src="index.js"></script>
+    <script src="index.js"></script>    
 </body>
 </html>
